<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@android:color/transparent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageviewPark2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/park_pic" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/parkToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior = "@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewParkInfoAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:padding="12dp"
                        android:text="@string/title_notifications"
                        android:textColor="@color/Black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkBoxHandicapFriendly"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:text="@string/handicap_friendly" />

                        <CheckBox
                            android:id="@+id/checkBoxDogFriendly"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:text="@string/dog_friendly" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkBoxPlayground"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:text="@string/playground" />

                        <CheckBox
                            android:id="@+id/checkBoxParking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:text="@string/has_parking" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textViewParkInfoDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="12dp"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/cant_find_location"
                        android:textSize="13sp" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:numStars="5"
                        android:stepSize="0.1" />

                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewpagerPictures"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="15dp">

                    </android.support.v4.view.ViewPager>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent">

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/floatingActionButtonShare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            app:backgroundTint="@color/LimeGreen"
                            app:srcCompat="@android:drawable/ic_menu_share" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/floatingActionButtonNavigate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            app:backgroundTint="@color/LimeGreen"
                            app:srcCompat="@android:drawable/ic_menu_directions" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/floatingActionButtonDelete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:visibility="gone"
                            app:backgroundTint="@color/LimeGreen"
                            app:srcCompat="@android:drawable/ic_menu_delete" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/floatingActionButtonLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            app:backgroundTint="@color/LimeGreen"
                            app:srcCompat="@android:drawable/ic_menu_mylocation" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/ratingBarReview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="0.1" />

                    <EditText
                        android:id="@+id/editTextReview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/review_string" />

                    <RadioButton
                        android:id="@+id/radioButtonHandicap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/handicap_friendly" />

                    <RadioButton
                        android:id="@+id/radioButtonDog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dog_friendly"
                        tools:text="@string/dog_friendly" />

                    <RadioButton
                        android:id="@+id/radioButtonAmusment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/has_parking" />

                    <RadioButton
                        android:id="@+id/radioButtonParking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/playground" />

                    <Button
                        android:id="@+id/buttonSendReview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Send Review" />


                </LinearLayout>


            </android.support.v7.widget.CardView>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" >
                </android.support.v7.widget.RecyclerView>


            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_action_name"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp" />

</android.support.design.widget.CoordinatorLayout>